# MILUINO

./: README.md
FREERTOS_Milandr_template/: CMakeCache.txt  CMakeLists.txt
FREERTOS_Milandr_template/Drivers/: CMakeLists.txt  cmake_install.cmake
FREERTOS_Milandr_template/Drivers/CMSIS/DeviceSupport/startup/: system_K1986VE9xI.c
FREERTOS_Milandr_template/Drivers/SPL/: MDR32FxQI_config.h
FREERTOS_Milandr_template/FreeRTOS/include/: FreeRTOSConfig.h
FREERTOS_Milandr_template/app/inc/: app.h  clk.h
FREERTOS_Milandr_template/app/src/: app.c  clk.c
FREERTOS_Milandr_template/cmake/: gcc-milandr.cmake
FREERTOS_Milandr_template/openocd/: openocd_attach_jlinkOB.cfg  openocd_jlinkOB.cfg  openocd_stlink.cfg
Milandr_GCC/: .gitignore  CMakeLists.txt  MDR32F9Q2I.ld  openocd.cfg  startup_gcc_MDR32F9Q2I.s
Milandr_GCC/App/Src/: main.c
Milandr_GCC/CMSIS/MDR1986VK01/DeviceSupport/inc/: MDR1986VK01.h
Milandr_GCC/CMSIS/MDR1986VK01/DeviceSupport/startup/: system_MDR1986VK01.c  system_MDR1986VK01.h
Milandr_GCC/CMSIS/MDR32F2xQI/DeviceSupport/MDR32F21QI/: system_MDR32F21QI_config.h
Milandr_GCC/CMSIS/MDR32F2xQI/DeviceSupport/MDR32F23QI/: system_MDR32F23QI_config.h
Milandr_GCC/CMSIS/MDR32VF0xI/CoreSupport/inc/: core_bm310s.h  core_clic.h  core_clint.h  core_compiler.h  core_csr.h  core_extension_xgost.h  core_plic.h  core_types.h
Milandr_GCC/CMSIS/MDR32VF0xI/CoreSupport/src/: core_clic.c  core_clint.c  core_plic.c
Milandr_GCC/CMSIS/MDR32VF0xI/DeviceSupport/: system_MDR32VF0xI_config.h
Milandr_GCC/CMSIS/MDR32VF0xI/DeviceSupport/inc/: MDR32VF0xI.h  core_config.h  system_MDR32VF0xI.h  system_MDR32VF0xI_it.h
Milandr_GCC/CMSIS/MDR32VF0xI/DeviceSupport/src/: system_MDR32VF0xI.c  system_MDR32VF0xI_it.c
Milandr_GCC/SPL/MDR1986VK01/: MDR1986VK01_config.h
Milandr_GCC/SPL/MDR1986VK01/inc/: MDR1986VK01_can.h  MDR1986VK01_canfd.h  MDR1986VK01_clk.h  MDR1986VK01_delay.h  MDR1986VK01_dma.h  MDR1986VK01_ebc.h  MDR1986VK01_eth.h  MDR1986VK01_i2c.h  MDR1986VK01_milstd.h  MDR1986VK01_port.h  MDR1986VK01_sdio.h  MDR1986VK01_ssp.h  MDR1986VK01_timer.h  MDR1986VK01_uart.h  MDR1986VK01_usb.h
Milandr_GCC/SPL/MDR1986VK01/src/: MDR1986VK01_can.c  MDR1986VK01_canfd.c  MDR1986VK01_clk.c  MDR1986VK01_delay.c  MDR1986VK01_dma.c  MDR1986VK01_ebc.c  MDR1986VK01_eth.c  MDR1986VK01_i2c.c  MDR1986VK01_milstd.c  MDR1986VK01_port.c  MDR1986VK01_sdio.c  MDR1986VK01_ssp.c  MDR1986VK01_timer.c  MDR1986VK01_uart.c  MDR1986VK01_usb.c
Milandr_GCC/SPL/MDR32F2xQI/: MDR32F2xQI_config.h
Milandr_GCC/SPL/MDR32F2xQI/inc/: MDR32F21QI_crc.h  MDR32F21QI_dma.h  MDR32F23QI_i2c.h  MDR32F23QI_lcd.h  MDR32F2xQI_adc.h  MDR32F2xQI_adcui.h  MDR32F2xQI_bkp.h  MDR32F2xQI_eeprom.h  MDR32F2xQI_iwdg.h  MDR32F2xQI_port.h  MDR32F2xQI_power.h  MDR32F2xQI_rst_clk.h  MDR32F2xQI_ssp.h  MDR32F2xQI_timer.h  MDR32F2xQI_uart.h  MDR32F2xQI_utils.h  MDR32F2xQI_wwdg.h
Milandr_GCC/SPL/MDR32F2xQI/src/: MDR32F21QI_crc.c  MDR32F21QI_dma.c  MDR32F23QI_i2c.c  MDR32F23QI_lcd.c  MDR32F2xQI_adc.c  MDR32F2xQI_adcui.c  MDR32F2xQI_asm.S  MDR32F2xQI_bkp.c  MDR32F2xQI_eeprom.c  MDR32F2xQI_iwdg.c  MDR32F2xQI_port.c  MDR32F2xQI_power.c  MDR32F2xQI_rst_clk.c  MDR32F2xQI_ssp.c  MDR32F2xQI_timer.c  MDR32F2xQI_uart.c  MDR32F2xQI_utils.c  MDR32F2xQI_wwdg.c
Milandr_GCC/SPL/MDR32FxQI/inc/: MDR32FxQI_adc.h  MDR32FxQI_arinc429r.h  MDR32FxQI_arinc429t.h  MDR32FxQI_dsp.h  MDR32FxQI_eeprom.h  MDR32FxQI_port.h
Milandr_GCC/SPL/MDR32FxQI/src/: MDR32FxQI_asm.S  MDR32FxQI_asm_GCC.S  MDR32FxQI_bkp.c  MDR32FxQI_can.c  MDR32FxQI_dac.c  MDR32FxQI_ebc.c  MDR32FxQI_iwdg.c  MDR32FxQI_port.c  MDR32FxQI_rst_clk.c
Milandr_GCC/SPL/MDR32VF0xI/: MDR32VF0xI_config.h
Milandr_GCC/SPL/MDR32VF0xI/inc/: MDR32VF0xI_adc.h  MDR32VF0xI_adcui.h  MDR32VF0xI_bkp.h  MDR32VF0xI_clk_measure.h  MDR32VF0xI_crc.h  MDR32VF0xI_dma.h  MDR32VF0xI_flash.h  MDR32VF0xI_i2c.h  MDR32VF0xI_iwdg.h  MDR32VF0xI_l_block.h  MDR32VF0xI_otp.h  MDR32VF0xI_p_bit.h  MDR32VF0xI_p_byte.h  MDR32VF0xI_port.h  MDR32VF0xI_power.h  MDR32VF0xI_random.h  MDR32VF0xI_rst_clk.h  MDR32VF0xI_s_block.h  MDR32VF0xI_sensors.h  MDR32VF0xI_ssp.h  MDR32VF0xI_timer.h  MDR32VF0xI_uart.h  MDR32VF0xI_usart.h  MDR32VF0xI_utils.h  MDR32VF0xI_wwdg.h
Milandr_GCC/SPL/MDR32VF0xI/src/: MDR32VF0xI_adc.c  MDR32VF0xI_adcui.c  MDR32VF0xI_asm.S  MDR32VF0xI_bkp.c  MDR32VF0xI_clk_measure.c  MDR32VF0xI_crc.c  MDR32VF0xI_dma.c  MDR32VF0xI_flash.c  MDR32VF0xI_i2c.c  MDR32VF0xI_iwdg.c  MDR32VF0xI_l_block.c  MDR32VF0xI_otp.c  MDR32VF0xI_port.c  MDR32VF0xI_power.c  MDR32VF0xI_random.c  MDR32VF0xI_rst_clk.c  MDR32VF0xI_sensors.c  MDR32VF0xI_ssp.c  MDR32VF0xI_timer.c  MDR32VF0xI_uart.c  MDR32VF0xI_usart.c  MDR32VF0xI_utils.c  MDR32VF0xI_wwdg.c
Milandr_GCC_template/: CMakeLists.txt  CMakePresets.json
Milandr_GCC_template/Drivers/: CMakeLists.txt
Milandr_GCC_template/Drivers/SPL/: MDR32FxQI_config.h
Milandr_GCC_template/Drivers/SPL/inc/: MDR32FxQI_audio.h  MDR32FxQI_bkp.h  MDR32FxQI_can.h  MDR32FxQI_dma.h  MDR32FxQI_ebc.h  MDR32FxQI_i2c.h  MDR32FxQI_iwdg.h  MDR32FxQI_mil_std_1553.h  MDR32FxQI_power.h  MDR32FxQI_rst_clk.h  MDR32FxQI_ssp.h  MDR32FxQI_timer.h  MDR32FxQI_uart.h  MDR32FxQI_wwdg.h
Milandr_GCC_template/Drivers/SPL/src/: MDR32FxQI_adc.c  MDR32FxQI_arinc429r.c  MDR32FxQI_arinc429t.c  MDR32FxQI_audio.c  MDR32FxQI_comp.c  MDR32FxQI_dma.c  MDR32FxQI_dsp.c  MDR32FxQI_eth.c  MDR32FxQI_mil_std_1553.c  MDR32FxQI_power.c  MDR32FxQI_sdio.c  MDR32FxQI_timer.c
Milandr_GCC_template/app/inc/: app.h  systick.h
Milandr_GCC_template/app/src/: app.c  clk.c  systick.c
Milandr_GCC_template_2/: CMakeLists.txt  MDR32F9Q2I.ld  MDR32F9Q2I.svd
Milandr_GCC_template_2/App/inc/: app.h
Milandr_GCC_template_2/Drivers/: CMakeLists.txt
Milandr_GCC_template_2/Drivers/SPL/inc/: MDR32FxQI_comp.h  MDR32FxQI_dac.h  MDR32FxQI_eth.h  MDR32FxQI_sdio.h  MDR32FxQI_usb.h  MDR32FxQI_utils.h
Milandr_GCC_template_2/Drivers/SPL/src/: MDR32FxQI_eeprom.c  MDR32FxQI_i2c.c  MDR32FxQI_ssp.c  MDR32FxQI_uart.c  MDR32FxQI_usb.c  MDR32FxQI_utils.c  MDR32FxQI_wwdg.c
Milandr_GCC_template_2/Startup/: startup_gcc_MDR32F9Q2I.s
Milandr_GCC_template_2/app/src/: app.c
(+43 files in other folders)
